<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.UserDetailFavActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="20dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <RelativeLayout
                android:id="@+id/cv_container"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:layout_marginBottom="15dp"
                android:layout_marginTop="90dp"
                android:layout_marginEnd="30dp"
                app:cardElevation="0dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="20dp"
                    tools:ignore="UselessParent">

                    <TextView
                        android:id="@+id/username"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="36dp"
                        android:fontFamily="@font/poppinsregular"
                        android:gravity="center"
                        android:text="@string/username_github"
                        android:textSize="18sp"
                        android:textStyle="bold" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:orientation="horizontal">

                        <TextView
                            android:id="@+id/followers"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginEnd="5dp"
                            android:layout_weight="3"
                            android:fontFamily="@font/montserratregular"
                            android:gravity="center"
                            android:text="@string/zero"
                            android:textAlignment="center"
                            android:textSize="14sp"
                            android:textStyle="bold" />

                        <TextView
                            android:id="@+id/following"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginEnd="5dp"
                            android:layout_weight="3"
                            android:fontFamily="@font/montserratregular"
                            android:gravity="center"
                            android:text="@string/zero"
                            android:textAlignment="center"
                            android:textSize="14sp"
                            android:textStyle="bold" />

                        <TextView
                            android:id="@+id/repositories"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginEnd="5dp"
                            android:layout_weight="3"
                            android:fontFamily="@font/montserratregular"
                            android:text="@string/zero"
                            android:textAlignment="center"
                            android:textStyle="bold" />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:layout_marginTop="8dp"
                        android:gravity="center_horizontal"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="2"
                            android:fontFamily="@font/poppinsregular"
                            android:text="@string/following"
                            android:textAlignment="center"
                            android:textSize="14sp" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="2"
                            android:fontFamily="@font/poppinsregular"
                            android:text="@string/follower"
                            android:textAlignment="center"
                            android:textSize="14sp" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:fontFamily="@font/poppinsregular"
                            android:text="@string/repositori"
                            android:textAlignment="center" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="24dp"
                        android:orientation="horizontal"
                        tools:ignore="UseCompoundDrawables">

                        <ImageView
                            android:layout_width="20dp"
                            android:layout_height="20dp"
                            android:layout_marginEnd="10dp"
                            android:contentDescription="@string/gambar"
                            android:src="@drawable/ic_baseline_account_balance_24" />

                        <TextView
                            android:id="@+id/company"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/poppinsregular"
                            android:gravity="center"
                            android:text="@string/company"

                            android:textSize="14sp" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:orientation="horizontal"
                        tools:ignore="UseCompoundDrawables">

                        <ImageView
                            android:layout_width="20dp"
                            android:layout_height="20dp"
                            android:layout_marginEnd="10dp"
                            android:contentDescription="@string/lokasi"
                            android:src="@drawable/ic_baseline_public_24" />

                        <TextView
                            android:id="@+id/location"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/poppinsregular"
                            android:gravity="center"
                            android:text="@string/lokasi"
                            android:textSize="14sp" />
                    </LinearLayout>
                </LinearLayout>
            </RelativeLayout>

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/avatars"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="30dp"
                android:src="#AFACAC"
                app:civ_border_color="#fff"
                app:civ_border_width="1dp" />

            <com.google.android.material.tabs.TabLayout
                android:id="@+id/tabs"
                app:tabTextColor="@color/blue_500"
                android:layout_width="match_parent"
                app:tabIndicatorColor="@color/blue_500"
                android:layout_height="wrap_content"
                android:layout_below="@id/cv_container"
                app:tabMode="fixed"
                android:minHeight="?actionBarSize"
                app:tabIndicatorFullWidth="false"
                app:tabIndicatorHeight="2dp"
                app:tabRippleColor="@null" />

            <androidx.viewpager2.widget.ViewPager2
                android:id="@+id/viewpager"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_below="@id/tabs" />
        </RelativeLayout>
    </ScrollView>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab_add"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:foregroundGravity="bottom"
        app:fabSize="normal"
        app:layout_anchorGravity="bottom|end"
        app:srcCompat="@drawable/ic_baseline_delete_forever_24"
        android:contentDescription="@string/fab_desc" />

</androidx.constraintlayout.widget.ConstraintLayout>